fix font size and misc

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
     <!-- end contact -->
     <section class="contact">
         <div class="container">
+            <div class="back-to-top">
+                <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+            </div>
             <p>Have any question or want to work together?</p>
             <form class="form" action="https://formspree.io/xoqkavzv" method="POST">
                 <input type="text" name="name" id="name" placeholder="Name" required>
