fix misc and add animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio new Version</title>
     <script src="https://kit.fontawesome.com/aa46252c9e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 </head>
 
@@ -158,6 +159,14 @@
         <div style="text-align: center;">Created by Viet Nguyen</div>
     </footer>
     <script src="main.js"></script>
+    <!-- <script type="text/javascript">
+        ScrollReveal().reveal('.animate-right', {
+            origin: 'left',
+            duration: 1000,
+            distance: '35rem',
+            delay: 600
+        });
+    </script> -->
 </body>
 
 </html>
